# NDKPirateGame

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_main.cpp
app/src/main/cpp/engine/: ActivityHandler.hpp  EventLoop.cpp  EventLoop.hpp  GraphicsManager.cpp  GraphicsManager.hpp  InputHandler.hpp  InputManager.cpp  InputManager.hpp  Log.cpp  Log.hpp  MoveableBody.cpp  MoveableBody.hpp  PhysicsManager.cpp  PhysicsManager.hpp  Resource.cpp  Resource.hpp  Sound.cpp  Sound.hpp  SoundManager.cpp  SoundManager.hpp  SoundQueue.cpp  SoundQueue.hpp  Sprite.cpp  Sprite.hpp  SpriteBatch.cpp  SpriteBatch.hpp  TimeManager.cpp  TimeManager.hpp  Types.hpp
app/src/main/cpp/pirate/: Background.cpp  Background.h  Box.cpp  Box.h  Cave.cpp  Cave.h  Coin.cpp  Coin.h  Coins.cpp  Coins.h  GameController.h  Lives.cpp  Lives.h  Pirate.cpp  Pirate.h  PirateShip.cpp  PirateShip.h  Player.cpp  Player.h  PredefinedText.cpp  PredefinedText.h  SlotMachine.cpp  SlotMachine.h  Slots.cpp  Slots.h  TutorialScreen.cpp  TutorialScreen.h
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
